--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intl": "^7.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.0",
