--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
-    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intl": "^7.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "sweetalert2": "^11.15.10",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/aos": "^3.0.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
